# scribe-crab

./: .format.md  Cargo.toml  README.md
docs/translations/: README.es.md  README.ja.md  README.zh.md
src/: doc_generator.rs  main.rs
src/app/: doc_generator.rs
