[package]
name = "scribe-crab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = [
    "client",
    "macros",
    "server",
    "transport-io",
] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
